--- a/JSSand/index.html
+++ b/JSSand/index.html
@@ -16,6 +16,10 @@
 			<button onclick="setElement(3)">Water</button>
 			<br />
 			<button onclick="setElement(4)">Ice</button>
+			<br />
+			<button onclick="setElement(5)">Tree</button>
+			<br />
+			<button onclick="setElement(7)">Wood</button>
 		</div>
 	</body>
 	<script src="scripts.js"></script>
