--- a/ocmaker/index.html
+++ b/ocmaker/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>World Trigger OC Template</title>
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+		<link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
 		<link rel="stylesheet" href="ocstyles.css">
 		<script src="ocscripts.js"></script>
     </head>
