--- a/wtminifangame/index.html
+++ b/wtminifangame/index.html
@@ -121,6 +121,7 @@
         <button onclick="diceRoll()">Roll</button>
         <br />
         <span id="roll">Rolled: </span>
+        <button onclick="test()">TEST</button>
     </div>
 </body>
 <script src="scripts.js"></script>
