--- a/wtminifangame/index.html
+++ b/wtminifangame/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>OC Tournament</title>
     <link rel="stylesheet" href="styles.css">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 
 <body>
