--- a/index.html
+++ b/index.html
@@ -1,68 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Main Page</title>
-	<style>
-		body {
-            padding:0px;
-            background-color:#222222;
-            font-family:arial;
-            color:#00bd8b;
-        }
-		* {
-			padding:0;
-			margin:0;
-		}
-		#nav {
-			background-color:black;
-			color:white;
-			text-align:left;
-            height:50px;
-		}
-		h1 {
-			display:inline;
-            position:absolute;
-            top:10px;
-            font-weight:bold;
-		}
-		#nav button {
-			background-color:black;
-			border-style:none;
-			font-size:16px;
-            padding-top:12.5px;
-            padding-bottom:12.5px;
-            height:50px;
-			float:right;
-			padding:15px;
-			color:cyan;
-		}
-		#nav button:hover {
-			background-color:#4CAF50;
-			color:white;
-		}
-		#nav button:focus {
-            outline:none;
-        }
-		#nav button:active {
-			background-color:#2e2e2e;
-		}
-		a {
-			text-decoration: none;
-			color:cyan;
-		}
-	</style>
-  </head>
-  <body align="center">
+
+<head>
+	<title>Main Page</title>
+	<link rel="stylesheet" href="styles.css">
+</head>
+
+<body align="center">
 	<div id="nav">
-		<h1>Hello There</h1>
-		<a href="https://emperorbob7.github.io/ocmaker"><button id="creator">OC CREATOR</button></a>
-		<a href="https://emperorbob7.github.io/randomizer"><button id="randomizer">RANDOMIZER</button></a>
-		<a href="https://emperorbob7.github.io/rigged"><button id="rigged">RIGGED GAME</button></a>
-		<a href="https://emperorbob7.github.io/Bobbf"><button id="bobbf">BOBBF</button></a>
-		<a href="https://emperorbob7.github.io/passwordalgorithm"><button id="password">PASSWORD</button></a>
+		<h1>Emperor Bob's Github</h1>
+		<img src="./images/important.png" width="200px" />
 	</div>
 	<div id="main">
-		<h2 style="margin-top:10px;">Please Use The Nav Buttons To Find Your Way Around</h2>
+		<a href="https://emperorbob7.github.io/ocmaker"><button id="creator">WT OC Creator</button></a>
+		<a href="https://emperorbob7.github.io/jsheets"><button id="creator">JSHEETS</button></a>
+		<a href="https://emperorbob7.github.io/jssand"><button id="creator">JS Sand</button></a>
+		<a href="https://emperorbob7.github.io/jojogame"><button id="creator">JoJo Game</button></a>
+		<a href="https://emperorbob7.github.io/wtminifangame"><button id="creator">WT Mini Fan Game</button></a>
+		<a href="https://emperorbob7.github.io/passwordalgorithm"><button id="creator">Password Algorithm</button></a>
+		<a href="https://github.com/EmperorBob7/emperorbob7.github.io/tree/master/Daily%20Programming%20Challenges"><button id="creator">Daily Programming Challenges</button></a>
 	</div>
-  </body>
+</body>
+
 </html>
