Bug Fixes, Line Wrap

--- a/ocmaker/index.html
+++ b/ocmaker/index.html
@@ -716,6 +716,7 @@
                 <option value="ATTACKER TRIGGER">Attacker</option>
                 <option value="SHOOTER TRIGGER">Shooter</option>
                 <option value="SNIPER TRIGGER">Sniper</option>
+                <option value="GUNNER TRIGGER">Gunner</option>
             </select>
             <br /><br />
             <button onclick="addTrigger()" id="triggerAdder">Add Trigger</button>
