--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<a href="https://emperorbob7.github.io/jojogame"><button id="creator">JoJo Game</button></a>
 		<a href="https://emperorbob7.github.io/wtminifangame"><button id="creator">WT Mini Fan Game</button></a>
 		<a href="https://emperorbob7.github.io/passwordalgorithm"><button id="creator">Password Algorithm</button></a>
-		<a href="https://github.com/EmperorBob7/emperorbob7.github.io/tree/master/Daily%20Programming%20Challenges"><button id="creator">Daily Programming Challenges</button></a>
+		<a href="https://github.com/EmperorBob7/Daily-Programming-Challenges"><button id="creator">Daily Programming Challenges</button></a>
 	</div>
 </body>
 
