--- a/BoringMaze/index.html
+++ b/BoringMaze/index.html
@@ -4,6 +4,16 @@
 <head>
     <title>Boring Maze</title>
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+    <!-- Begin SessionStack code -->
+<script type="text/javascript">
+    !function(a,b){var c=window;c.SessionStackKey=a,c[a]=c[a]||{t:b,
+    q:[]};for(var d=["start","stop","identify","getSessionId","log","setOnDataCallback"],e=0;e<d.length;e++)!function(b){
+    c[a][b]=c[a][b]||function(){c[a].q.push([b].concat([].slice.call(arguments,0)));
+    }}(d[e]);var f=document.createElement("script");f.async=1,f.crossOrigin="anonymous",
+    f.src="https://cdn.sessionstack.com/sessionstack.js";var g=document.getElementsByTagName("script")[0];
+    g.parentNode.insertBefore(f,g)}("SessionStack","75611ef0aa5548bc937b4b56e56f484d");
+    </script>
+    <!-- End SessionStack Code -->
 </head>
 
 <body>
