Boring Maze Link

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<a href="https://emperorbob7.github.io/wtminifangame"><button id="creator">WT Mini Fan Game</button></a>
 		<a href="https://emperorbob7.github.io/passwordalgorithm"><button id="creator">Password Algorithm</button></a>
 		<a href="https://github.com/EmperorBob7/Daily-Programming-Challenges"><button id="creator">Daily Programming Challenges</button></a>
+		<a href="https://emperorbob7.github.io/BoringMaze/"><button id="creator">Boring Maze</button></a>
 	</div>
 </body>
 
