--- a/Triggle/index.html
+++ b/Triggle/index.html
@@ -13,7 +13,7 @@
     <h1>TRIGGLE</h1>
     <table id="table">
     </table>
-
+    <div id="popup"></div>
     <div id="keyboard">
         <div class="row">
             <button>Q</button>
