--- a/Triggle/index.html
+++ b/Triggle/index.html
@@ -7,6 +7,12 @@
     <title>TRIGGLE</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='styles.css'>
+
+    <meta content="Triggle" property="og:title" />
+    <meta content="The World Trigger 5 letter guessing game." property="og:description" />
+    <meta content="https://emperorbob7.github.io/Triggle/" property="og:url" />
+    <meta content="https://cdn.discordapp.com/emojis/509111678042898472.png" property="og:image" />
+    <meta content="#06b297" data-react-helmet="true" name="theme-color" />
 </head>
 
 <body>
@@ -35,25 +41,32 @@
         <h3>Distribution</h3>
         <table id="distTable">
             <tr>
-                <td>1</td><td id="1">0</td>
+                <td>1</td>
+                <td id="1">0</td>
             </tr>
             <tr>
-                <td>2</td><td id="2">0</td>
+                <td>2</td>
+                <td id="2">0</td>
             </tr>
             <tr>
-                <td>3</td><td id="3">0</td>
+                <td>3</td>
+                <td id="3">0</td>
             </tr>
             <tr>
-                <td>4</td><td id="4">0</td>
+                <td>4</td>
+                <td id="4">0</td>
             </tr>
             <tr>
-                <td>5</td><td id="5">0</td>
+                <td>5</td>
+                <td id="5">0</td>
             </tr>
             <tr>
-                <td>6</td><td id="6">0</td>
+                <td>6</td>
+                <td id="6">0</td>
             </tr>
             <tr>
-                <td>DNF</td><td id="DNF">0</td>
+                <td>DNF</td>
+                <td id="DNF">0</td>
             </tr>
         </table>
     </div>
