Copy to Clipboard + Animations
TODO: Fix Logic of multiple characters

--- a/Triggle/index.html
+++ b/Triggle/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <nav>
-        <button>?</button>
+        <button id="help">?</button>
         <h1>TRIGGLE</h1>
         <h1 style="font-family: 'Fontello';" id="share">&#xe800</h1>
     </nav>
@@ -69,6 +69,7 @@
                 <td id="DNF">0</td>
             </tr>
         </table>
+        <button id="shareButton">Share</button>
     </div>
     <div id="keyboard">
         <div class="row">
@@ -111,6 +112,8 @@
         </div>
     </div>
     <div id="blocker"></div>
+    <div id="messagePopUp"></div>
+    <textarea id="content"></textarea>
     <script src='scripts.js' type="module"></script>
 </body>
 
