--- a/Triggle/index.html
+++ b/Triggle/index.html
@@ -11,7 +11,7 @@
     <meta content="Triggle" property="og:title" />
     <meta content="The World Trigger 5 letter guessing game." property="og:description" />
     <meta content="https://emperorbob7.github.io/Triggle/" property="og:url" />
-    <meta content="https://cdn.discordapp.com/emojis/509111678042898472.png" property="og:image" />
+    <meta content="https://i.pinimg.com/originals/83/ee/60/83ee6035704323a86b8ed5c3179734a6.png" property="og:image" />
     <meta content="#06b297" data-react-helmet="true" name="theme-color" />
 </head>
 
