Display Answer + Fixed Color Logic

--- a/Triggle/index.html
+++ b/Triggle/index.html
@@ -24,6 +24,7 @@
     <table id="table">
     </table>
     <div id="popup">
+        <h3 id="displayWord">The Word Was:</h3>
         <h3>Statistics</h3>
         <table id="statsTable">
             <tr>
