More Logic Update + Reddit Spoilers + Reset Counter

--- a/Triggle/index.html
+++ b/Triggle/index.html
@@ -70,6 +70,8 @@
                 <td id="DNF">0</td>
             </tr>
         </table>
+        <label>Reddit Spoiler: </label><input type="checkbox" id="redditSpoiler">
+        <br/><br/>
         <button id="shareButton">Share</button>
     </div>
     <div id="keyboard">
