Changed datalist to select

--- a/ocmaker2/index.html
+++ b/ocmaker2/index.html
@@ -82,42 +82,34 @@
             </thead>
             <tr>
                 <td>
-                    <input list="sub1list" id="sub1">
-                    <datalist id="sub1list"></datalist>
+                    <select id="sub1list"></select>
                 </td>
                 <td>
-                    <input list="main1list" id="main1">
-                    <datalist id="main1list"></datalist>
+                    <select id="main1list"></select>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <input list="sub2list" id="sub2">
-                    <datalist id="sub2list"></datalist>
+                    <select id="sub2list"></select>
                 </td>
                 <td>
-                    <input list="main2list" id="main2">
-                    <datalist id="main2list"></datalist>
+                    <select id="main2list"></select>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <input list="sub3list" id="sub3">
-                    <datalist id="sub3list"></datalist>
+                    <select id="sub3list"></select>
                 </td>
                 <td>
-                    <input list="main3list" id="main3">
-                    <datalist id="main3list"></datalist>
+                    <select id="main3list"></select>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <input list="sub4list" id="sub4">
-                    <datalist id="sub4list"></datalist>
+                    <select id="sub4list"></select>
                 </td>
                 <td>
-                    <input list="main4list" id="main4">
-                    <datalist id="main4list"></datalist>
+                    <select id="main4list"></select>
                 </td>
             </tr>
         </table>
