Fix Not-loading Fonts, Changed Background Colors, Added primitive Saving in HD

--- a/ocmaker2/index.html
+++ b/ocmaker2/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>World Trigger Character</h1>
+    <h1>World Trigger OC Maker</h1>
     <div id="inputs">
         <label>Character Image: </label><input type="text" placeholder="https://image" id="characterImage" /><br />
         <label>Character Name: </label><input type="text" placeholder="Bob" id="characterName" /> <br />
@@ -121,6 +121,14 @@
     <hr />
     <span id="console"></span>
     <canvas width="1200px" height="554px" id="canvas"></canvas>
+    <div id="bigCanvasContainer"></div>
+
+    <div style="font-family: universalis;"> </div>
+    <div style="font-family: coda;"> </div>
+    <div style="font-family: komix;"> </div>
+    <div style="font-family: wild;"> </div>
+    <div style="font-family: stencil;"> </div>
+
     <script src="triggerUrls.js"></script>
     <script src="scripts.js"></script>
 </body>
