Mobile Media Queries

--- a/ocmaker2/index.html
+++ b/ocmaker2/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <title>World Trigger OC Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="mobile.css">
 </head>
 
 <body>
@@ -38,7 +40,7 @@
 
     <hr style="grid-area: hr2;" />
     <!--Character Information-->
-    <div class="chartInputs" style="grid-area: textInputs;">
+    <div class="chartInputs" style="grid-area: textInputs;" id="chartInputs2">
         <table>
             <tr>
                 <td><label>Age: </label><input type="number" placeholder="24" id="age" /></td>
@@ -78,7 +80,7 @@
             </tr>
         </table>
     </div>
-    
+
     <hr style="grid-area: hr3;" />
     <!--Trigger Selection Table-->
     <div class="triggerInputs" style="grid-area: triggers;">
