Bagworm Tag, Fixed Fonts Again

--- a/ocmaker2/index.html
+++ b/ocmaker2/index.html
@@ -137,11 +137,11 @@
     <div id="bigCanvasContainer"></div>
 
     <!--Load Fonts-->
-    <div style="font-family: universalis;"> </div>
-    <div style="font-family: coda;"> </div>
-    <div style="font-family: komix;"> </div>
-    <div style="font-family: wild;"> </div>
-    <div style="font-family: stencil;"> </div>
+    <div class="fontLoader" style="font-family: universalis;">\</div>
+    <div class="fontLoader" style="font-family: coda;">\</div>
+    <div class="fontLoader" style="font-family: komix;">\</div>
+    <div class="fontLoader" style="font-family: wild;">\</div>
+    <div class="fontLoader" style="font-family: stencil;">\</div>
     <!--End of Load Fonts-->
 
     <!--Load Scripts-->
