Major UI Updates, Fixed Operator Stat Drawing

--- a/ocmaker/index.html
+++ b/ocmaker/index.html
@@ -13,59 +13,84 @@
     <br />
     <br />
     <div id="form">
-        <input type="text" placeholder="OC Name" id="name" style="text-transform: uppercase" />
-        <input type="number" placeholder="Squad Ranking" min="1" id="ranking" />
-        <input type="url" placeholder="Squad Emblem Logo" id="emblem" />
-        <select id="squadrank">
-            <option value="A">A-Rank</option>
-            <option value="B">B-Rank</option>
-        </select>
+        <paramTable>
+            <paramStat>
+                <label>Name</label>
+                <input type="text" placeholder="OC Name" id="name" style="text-transform: uppercase" />
+            </paramStat>
+            <paramStat>
+                <label>Ranking</label>
+                <input type="number" placeholder="Squad Ranking" min="1" id="ranking" />
+            </paramStat>
+            <paramStat>
+                <label>Emblem</label>
+                <input type="url" placeholder="Squad Emblem Logo" id="emblem" />
+            </paramStat>
+            <paramStat>
+                <label>Squad Rank</label>
+                <select id="squadrank">
+                    <option value="A">A-Rank</option>
+                    <option value="B">B-Rank</option>
+                </select>
+            </paramStat>
+        </paramTable>
     </div>
+    <hr />
     <div id="parameters">
-        <hr />
         <h3>Parameters</h3>
-        <label>Operator: </label><input type="checkbox" id="operatorCheck" onchange="operatorCheck()"/>
-        <table>
-            <tr>
-                <td>Trion</td>
-                <td>Attack</td>
-                <td>Defense & Support</td>
-                <td>Mobility</td>
-            </tr>
-            <tr>
-                <td><input type="number" value="0" id="trion" min="1" /></td>
-                <td><input type="number" value="0" id="attack" min="1" /></td>
-                <td><input type="number" value="0" id="defense" min="1" /></td>
-                <td><input type="number" value="0" id="mobility" min="1" /></td>
-            </tr>
-            <tr>
-                <td>Skill</td>
-                <td>Range</td>
-                <td>Command</td>
-                <td>Special Tactics</td>
-            </tr>
-            <tr>
-                <td><input type="number" value="0" id="skill" min="1" /></td>
-                <td><input type="number" value="0" id="range" min="1" /></td>
-                <td><input type="number" value="0" id="command" min="1" /></td>
-                <td><input type="number" value="0" id="tactics" min="1" /></td>
-            </tr>
-            <tr>
-                <td>Mechanical Operation</td>
-                <td>Data Analysis</td>
-                <td>Parallel Processing</td>
-                <!-- <td>Special Tactics</td> -->
-            </tr>
-            <tr>
-                <td><input type="number" value="0" id="mechanical" min="1" /></td>
-                <td><input type="number" value="0" id="analysis" min="1" /></td>
-                <td><input type="number" value="0" id="parallel" min="1" /></td>
-                <!-- <td><input type="number" value="0" id="tactics" min="1" /></td> -->
-            </tr>
-        </table>
+        <paramStat>
+            <label>Operator: </label>
+            <input type="checkbox" id="operatorCheck" onchange="operatorCheck()" />
+        </paramStat>
+        <paramTable>
+            <paramStat id="trionP">
+                <label>Trion</label>
+                <input type="number" value="0" id="trion" min="1" />
+            </paramStat>
+            <paramStat id="attackP">
+                <label>Attack</label>
+                <input type="number" value="0" id="attack" min="1" />
+            </paramStat>
+            <paramStat id="defenseP">
+                <label>Defense & Support</label>
+                <input type="number" value="0" id="defense" min="1" />
+            </paramStat>
+            <paramStat id="mobilityP">
+                <label>Mobility</label>
+                <input type="number" value="0" id="mobility" min="1" />
+            </paramStat>
+            <paramStat id="skillP">
+                <label>Skill</label>
+                <input type="number" value="0" id="skill" min="1" />
+            </paramStat>
+            <paramStat id="rangeP">
+                <label>Range</label>
+                <input type="number" value="0" id="range" min="1" />
+            </paramStat>
+            <paramStat id="mechanicalP">
+                <label>Mechanical Operation</label>
+                <input type="number" value="0" id="mechanical" min="1" />
+            </paramStat>
+            <paramStat id="analysisP">
+                <label>Data Analysis</label>
+                <input type="number" value="0" id="analysis" min="1" />
+            </paramStat>
+            <paramStat id="parallelP">
+                <label>Parallel Processing</label>
+                <input type="number" value="0" id="parallel" min="1" />
+            </paramStat>
+            <paramStat id="commandP">
+                <label>Command</label>
+                <input type="number" value="0" id="command" min="1" />
+            </paramStat>
+            <paramStat id="tacticsP">
+                <label>Special Tactics</label>
+                <input type="number" value="0" id="tactics" min="1" />
+            </paramStat>
+        </paramTable>
     </div>
+    <hr />
     <div id="profile">
-        <hr />
         <h3>Profile</h3>
         <table>
             <tr>
@@ -101,8 +126,8 @@
         </table>
     </div>
     <hr />
-    <h3>Triggers</h3>
     <div id="triggers">
+        <h3>Triggers</h3>
         <table>
             <tr>
                 <th>Sub</th>
@@ -672,48 +697,55 @@
         </table>
         <hr />
         <div id="customTriggers">
-            <label>Custom Triggers</label>
-            <br />
-            <select id="customImg">
-                <option value="0">Optional</option>
-                <option value="1">Shield</option>
-                <option value="2">Scorpion</option>
-                <option value="3">Egret</option>
-                <option value="4">Asteroid</option>
-                <option value="5">Handgun</option>
-                <option value="6">Kogetsu</option>
-                <option value="7">Raygust</option>
-                <option value="8">Viper</option>
-                <option value="9">Meteora</option>
-                <option value="10">Hound</option>
-                <option value="11">Spear: Kogetsu</option>
-                <option value="12">Ibis</option>
-                <option value="13">Lightning</option>
-                <option value="14">Escudo</option>
-                <option value="15">Assault Rifle</option>
-                <option value="16">Shotgun</option>
-                <option value="17">Grenade Launcher</option>
-                <option value="19">Switchbox</option>
-                <option value="22">Sougetsu</option>
-            </select> <br />
-            <label>Trigger Name</label>
-            <input type="text" id="customTriggerName" placeholder="Scorpion" />
-            <label>Trigger Type</label> <br />
-            <select id="customTriggerType">
-                <option value="OPTION TRIGGER">Optional</option>
-                <option value="DEFENSE TRIGGER">Defense</option>
-                <option value="ATTACKER TRIGGER">Attacker</option>
-                <option value="SHOOTER TRIGGER">Shooter</option>
-                <option value="SNIPER TRIGGER">Sniper</option>
-                <option value="GUNNER TRIGGER">Gunner</option>
-            </select>
-            <br /><br />
+            <h3>Custom Triggers</h3>
+            <paramTable>
+                <paramStat>
+                    <label>Trigger Image</label>
+                    <select id="customImg">
+                        <option value="0">Optional</option>
+                        <option value="1">Shield</option>
+                        <option value="2">Scorpion</option>
+                        <option value="3">Egret</option>
+                        <option value="4">Asteroid</option>
+                        <option value="5">Handgun</option>
+                        <option value="6">Kogetsu</option>
+                        <option value="7">Raygust</option>
+                        <option value="8">Viper</option>
+                        <option value="9">Meteora</option>
+                        <option value="10">Hound</option>
+                        <option value="11">Spear: Kogetsu</option>
+                        <option value="12">Ibis</option>
+                        <option value="13">Lightning</option>
+                        <option value="14">Escudo</option>
+                        <option value="15">Assault Rifle</option>
+                        <option value="16">Shotgun</option>
+                        <option value="17">Grenade Launcher</option>
+                        <option value="19">Switchbox</option>
+                        <option value="22">Sougetsu</option>
+                    </select>
+                </paramStat>
+                <paramStat>
+                    <label>Trigger Name</label>
+                    <input type="text" id="customTriggerName" placeholder="Scorpion" />
+                </paramStat>
+                <paramStat>
+                    <label>Trigger Type</label>
+                    <select id="customTriggerType">
+                        <option value="OPTION TRIGGER">Optional</option>
+                        <option value="DEFENSE TRIGGER">Defense</option>
+                        <option value="ATTACKER TRIGGER">Attacker</option>
+                        <option value="SHOOTER TRIGGER">Shooter</option>
+                        <option value="SNIPER TRIGGER">Sniper</option>
+                        <option value="GUNNER TRIGGER">Gunner</option>
+                    </select>
+                </paramStat>
+            </paramTable>
             <button onclick="addTrigger()" id="triggerAdder">Add Trigger</button>
         </div>
         <hr />
-        <br />
-        <button onclick="draw()">Draw Image</button>
     </div>
+    <br />
+    <button onclick="draw()">Draw Image</button>
     <!--0-25 is regular 3-6 Atacker 7-10 Shooter 11-13 Sniper 14-18 Attachments 19-25 Extras 26-32 Assault Rifles 33-39 Grenade Launchers 40-46 Shotguns 47-53 Handguns-->
     <canvas width="1280px" height="590px" style="border:2px solid black;" id="cv"></canvas>
     <script src="ocscripts.js"></script>
